--- a/components/links/Links.module.css
+++ b/components/links/Links.module.css
@@ -1,3 +1,3 @@
-.links li:hover {
+.links li {
   cursor: pointer;
 }
